# argosim

./: .buildinfo  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  about.html  argosim.antenna_utils.html  argosim.beam_utils.html  argosim.clean.html  argosim.data_utils.html  argosim.html  argosim.imaging_utils.html  argosim.plot_utils.html  argosim.rand_utils.html  contributors.html  dependencies.html  environment.yml  example.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  running.html  search.html  searchindex.js
.doctrees/: about.doctree  argosim.antenna_utils.doctree  argosim.beam_utils.doctree  argosim.clean.doctree  argosim.data_utils.doctree  argosim.doctree  argosim.imaging_utils.doctree  argosim.plot_utils.doctree  argosim.rand_utils.doctree  contributors.doctree  dependencies.doctree  environment.pickle  example.doctree  index.doctree  installation.doctree  modules.doctree  running.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help.md  installation_issue.md
.github/workflows/: apidoc.yml  ci-build.yml  deploy-image.yml
_modules/: index.html
_modules/argosim/: antenna_utils.html  beam_utils.html  clean.html  data_utils.html  imaging_utils.html  plot_utils.html  rand_utils.html
_sources/: argosim.antenna_utils.rst  argosim.beam_utils.rst  argosim.rand_utils.rst  argosim.rst  dependencies.md  example.md  installation.md  running.md
configs/arrays/: argos_pathfinder.enu.txt
configs/beams/dish_RealG_patterns/: dish_RealG_pattern_1GHz.txt  dish_RealG_pattern_1_5GHz.txt  dish_RealG_pattern_2GHz.txt  dish_RealG_pattern_2_5GHz.txt  dish_RealG_pattern_3GHz.txt
docs/source/: about.md  argosim.clean.rst  argosim.data_utils.rst  argosim.imaging_utils.rst  argosim.plot_utils.rst  argosim.rst  conf.py  contributors.md  index.rst  modules.rst
notebooks/: Clean_demo.ipynb  full_argos_demo.ipynb  multi_band_observation.ipynb  pathfinder_demo.ipynb  primary_beam.ipynb  radio_imaging_demo.ipynb  test_array_functions.ipynb  test_docker_container.ipynb
scripts/: test.py
scripts/2024_First_Production_run/: 2024_sims_full_argos.py  2024_sims_pathfinder.py
src/argosim/: __init__.py  antenna_utils.py  beam_utils.py  clean.py  data_utils.py  imaging_utils.py  plot_utils.py  rand_utils.py
(+2 files in other folders)
