[project]
name = "argosim"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {"name" = "Ezequiel Centofanti", "email" = "ezequiel.centofanti@cea.fr" },
    {"name" = "Emma Ayçoberry", "email" = "Emma.AYCOBERRY@cea.fr" },
]
maintainers = [
    {"name" = "Ezequiel Centofanti", "email" = "ezequiel.centofanti@cea.fr" },
    {"name" = "Emma Ayçoberry", "email" = "Emma.AYCOBERRY@cea.fr" },
]
description = 'Radio interferometric simulations package for the ARGOS radio telescope.'
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]
version = "0.0.2"

[project.optional-dependencies]
doc = [
    "myst-parser",
    "numpydoc",
    "sphinx",
    "sphinx-book-theme"
]
lint = [
    "black",
    "isort",
]
release = [
    "build",
    "twine",
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-pydocstyle",
]
dev = ["argosim[doc,lint,release,test]"]

[tool.pytest.ini_options]
addopts = "--verbose --pydocstyle --cov=argosim"
testpaths = ["src/argosim"]